Fix createDownloadList to handle relative path / remove library.zip from path.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 20120828
 - Update readConfig to handle Unicode, please note writing Unicode value still have error.
+- Fix createDownloadList to handle relative path / remove library.zip from path.
 
 20120806
 - Update PixivConfig to handle Unicode path.
