--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-20120903
+20120923
+- Fix PixivConfig doesn't allow %page_number% in settings
+
+20120921
 - Fix login method to use correct form.
 
 20120903
