--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+20121102
+- Add feature to export image information to text file. 
+  - Set writeimageinfo = True to use.
+
 20121028
 - Update error message detection for MyPick and Ero/Guro page.
 
