--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+20130201
+- Update imageDownload to skip if got 502 error.
+- Fix end page detection for download by tags.
+
 20130128
 - Fix end page limit.
 - Update parser for pixivArtist and download by tags.
