--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 20130222
 - Update parser to the latest pixiv layout.
-- Update last page detection (20130222b)
+- Update last page detection (20130222b).
+- Update sanitizeFilename: remove new line marker '\r\n' (20130222c).
 
 20130201
 - Update imageDownload to skip if got 502 error.
