--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+20130321
+- Fix command line option for download by member id and tags to allow single
+  tag search.
+
 20130316
 - Add option to skip image if worksDate < dateDiff, this will skip to next 
   member, or stop processing for download from new bookmark.
