--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
-20130701
+20130705
 - Update manga parser.
 - Add new option to back up old file if the filesize is different (backupOldFile).
+- Update test cases.
 
 20130511
 - Refactor out PixivException and PixivBrowserFactory.
