--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+20140606
+- Fix issue #33: fallback to member token if nickname not found
+- Add CLI option to load config file from path.
+- Implement feature #30: use %bookmark_count% and %image_response_count%
+
 20140325
 - Update unknown error handler.
 - Add %bookmark_count% for filename format, only available for download by tags.
