--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+20140620
+- Fix issue #36: Member illustration parser update.
+- Fix issue #37: Bookmark parser update.
+
 20140606
 - Fix issue #33: fallback to member token if nickname not found
 - Add CLI option to load config file from path.
