--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+20140705
+- Update download by member id to accept comma-separated list from console.
+- Update download by image id to accept comma-separated list from console.
+
 20140628
 - Update parser to support animation (ugoira_view).
 
