Fix Issue #44: process image to handle known image exception.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+20140916
+- Fix Issue #44: process image to handle known image exception.
+
 20140712
 - Fix parser for Option 8: Download new illust from bookmark.
 
