--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+20141212:
+- Fix Issue #60: Update image parser.
+
 20141201:
 - Fix Issue #58: Update handler for private image.
 - Update handler for deleted image.
