--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+20150105:
+- Update the SSL login page url to https://www.secure.pixiv.net/login.php.
+- Update BeautifulSoup to version 3.2.1.
+
 20141216:
 - Fix Issue #63: Update image parser again :(.
 
