--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - Implement #69: Create .ugoira format, open with http://www.bandisoft.com/forum/viewtopic.php?f=8&t=3359
 - Implement #69: Add local .ugoira file checking.
 - Implement #70: call os._exit() with error code != 0 if got exception.
+- Fix Issue #71: Always overwrite files even if local file is larger, use backupoldfile=True to backup the old file!
 - Fix Issue #72: Update download by tags parser.
 
 20150218:
