--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
-20151117-beta1:
+20160101-beta1:
 - Try to fix Issue #98.
+- Add option to filter image bookmark by tags.
+- Update parser.
 
 20151112:
 - Fix Issue #96: page 100 is not downloaded for new illust page.
