--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,9 @@
-20160101-beta1:
+20160210-beta:
 - Try to fix Issue #98.
 - Add option to filter image bookmark by tags.
 - Update parser.
+- Try to fix Issue #103
+- Fix Issue #104.
 
 20151112:
 - Fix Issue #96: page 100 is not downloaded for new illust page.
