--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
-20160308-beta1
+20160319
 - Fix unicode decode error when downloading image.
 - Implement #107: add option to specify different database.
 - Update readme.txt
+- Fix Issue #109: update parser.
 
 20160211:
 - Fix Issue #98: Fix error message when download fail.
