--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
-20160414-beta1
+20160414-beta2
 - Implement #108: enhance window titlebar to calculate the total images.
 - Fix Issue #112: change the max page limit for option 8 from 100 to 5000 for premium user.
+- Fix Issue #113: update filename sanitizer for windows.
 
 20160319
 - Fix unicode decode error when downloading image.
