--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+20160726
+- Implement #135: convert ugoira to gif.
+- Implement #140: skip image based on blacklisted member id.
+
 20160711
 - Implement #55: update list.txt parser to support member id extraction from url.
 
