--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+20160807-beta1
+- Fix Issue #143: update parser to handle specific tags.
+
 20160806
 - Implement #141: allow custom datetime format for filename.
 - Fix image caption parsing.
