--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
-20170102-beta1:
+20170102-beta2:
 - Fix code to enable dumping medium page by configuration.
+- Try to Fix Issue #182: Handle missing stats on Japanese UI.
 
 20161231
 - Fix Issue #181: Login using password.
