--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,10 @@
-20170508-beta1:
+20170515-beta2:
 - Update test cases.
 - Fix Issue #222: hide password in console.
 - Fix Issue #223: fix db result error.
 - Fix Issue #224 and #226: new big image mode for single page manga.
+- Fix Issue #228: Update urls to https.
+- Fix Issue #230: set defaultencoding to utf-8.
 
 20170411:
 - Update test cases.
