--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-20170524-beta3:
+20170619-beta4:
 - Update test cases.
 - Fix Issue #222: hide password in console.
 - Fix Issue #223: fix db result error.
@@ -7,6 +7,7 @@
 - Fix Issue #230: set defaultencoding to utf-8.
 - Fix Issue #232: UnboundLocalError local variable 'list_page' referenced before assignment.
 - Fix Issue #233: update dump hmtml page handler.
+- Add Handler for Issue #236: dump html page if no profile info for artist.
 
 20170411:
 - Update test cases.
