--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+20171127:
+- Implement #278: Allow to pass tag from command line operation for option 6.
+- Implement #276: Add random delay between each image post, set downloadDelay=0 to disable in config.ini.
+- Fix Issue #277: Update file sanitazion logic. Always replace '/' and '\' for %title%, %artist%, %searchTags%, %tags%, %works_tools%, and %original_artist% to '_'.
+
 20171006:
 - Fix Issue #272: fix PIL import
 
