--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+20180219-beta1
+- Fix Issue #315: Update parser for member token.
+- Implement #314: Set non-zero exit code for invalid input.
+- Set last-modified and last-accessed timestamp based on work's timestamp.
+- Update test cases.
+
 20180218
 - Implement #243: Add configuration to delete ugoira after converting to gif/apng. (Set deleteUgoira to True in config.ini).
 
